1. Fixed vignette to use new class and its image method. 2. Forced a consistent (I hope...) meaning for "horizontal" in the image method.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@183 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -7,15 +7,11 @@ importFrom("graphics", "image", "barplot", "abline", "layout",
            "axis", "plot", "rect", "text")
 importFrom("grDevices", "palette")
 
-exportClasses("Chromosome")
-export("Chromosome")
-exportMethods("image")
+exportClasses("Chromosome", "CytobandData")
+export("Chromosome", "CytobandData")
+exportMethods("image", "barplot", "summary")
 
 export("plot1Chrom", "singles",
        "showGenome",  "genomeBarplot",
        "makeIdiogram",
        "plot2Chrom", "biIdiogram", "stackIdiogram")
-
-export("CytobandData")
-exportClasses("CytobandData")
-exportMethods("barplot")
