Finished converting weirdly named functions to a single class-based interface using te image method.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@187 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -11,7 +11,4 @@ exportClasses("Chromosome", "CytobandData")
 export("Chromosome", "CytobandData")
 exportMethods("image", "barplot", "summary")
 
-export("plot1Chrom", "singles",
-       "showGenome",  "genomeBarplot",
-       "makeIdiogram",
-       "plot2Chrom", "biIdiogram", "stackIdiogram")
+export("singles", "showGenome")
