Added the ability for 'plot1Chrom1 to show signfiicance by fading outt he insignificant pieces.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@199 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -5,7 +5,7 @@ import(methods)
 importFrom("graphics", "image", "barplot", "abline", "layout",
            "legend", "lines", "mtext", "par",
            "axis", "plot", "rect", "text")
-importFrom("grDevices", "palette")
+importFrom("grDevices", "palette", "col2rgb", "rgb")
 
 exportClasses("Chromosome", "CytobandData")
 export("Chromosome", "CytobandData")
