Have the significance-colo0ring working in all views, both for single chromosomes and for genome-wide.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@204 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -4,7 +4,7 @@
 import(methods)
 importFrom("graphics", "image", "barplot", "abline", "layout",
            "legend", "lines", "mtext", "par",
-           "axis", "plot", "rect", "text")
+           "axis", "plot", "rect", "text", "box")
 importFrom("grDevices", "palette", "col2rgb", "rgb")
 
 exportClasses("Chromosome", "CytobandData")
