[1] Removed the unused/redundant "singles" funciton. []2 Commented out the S4 class definition in 101readLGF.R, but left it there if we want to use it later on. [2] Added documentation for readLGF. Added "Mercator" in Suggests part of DESCRIPTION file as part of this change, with list of the lymphoid paper in references.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@238 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/DESCRIPTION
+++ b/pkg/RCytoGPS/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RCytoGPS
-Version: 0.9.3
-Date: 2020-07-17
+Version: 0.9.6
+Date: 2020-07-28
 Title: Using Cytogenetics Data in R
 Author: Kevin R. Coombes, Dwayne Tally
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
@@ -8,6 +8,7 @@ Description: Defines classes and methods to process text-based
   cytogenetics using the CytoGPS web site, then import the results
   into R for further analysis and graphing.
 Depends: R (>= 3.5)
+Suggests: Mercator
 Imports: methods, graphics, grDevices, rjson
 VignetteBuilder: knitr
 Suggests: knitr, rmarkdown
