1. Added a print method for binaryMatrix. 2. Added a "recluster" function to change the number K of clusters. 3. Changed the Mercator constructor to accept any distance matrix. 4. Added a second vignette to focus on continuous data.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@241 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -25,7 +25,7 @@ export("binaryDistance")
 exportClasses("BinaryMatrix")
 export("BinaryMatrix", "removeDuplicateFeatures")
 
-exportMethods("[", "dim", "summary", "t")
+exportMethods("[", "dim", "summary", "t", "print")
 
 # 03-thresh
 exportClasses("ThreshedBinaryMatrix")
@@ -33,7 +33,7 @@ export("threshLGF")
 
 # 04-vis
 exportClasses("Mercator")
-export("Mercator", "addVisualization", "getClusters")
+export("Mercator", "addVisualization", "getClusters", "recluster")
 
 exportMethods("hist", "plot", "barplot", "scatter")
 
