Added a "show" method for BinaryMatrix objects.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@245 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -25,7 +25,7 @@ export("binaryDistance")
 exportClasses("BinaryMatrix")
 export("BinaryMatrix", "removeDuplicateFeatures")
 
-exportMethods("[", "dim", "summary", "t", "print")
+exportMethods("[", "dim", "summary", "t", "print", "show")
 
 # 03-thresh
 exportClasses("ThreshedBinaryMatrix")
