Added work-around to bug in R-devel.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@248 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -4,6 +4,10 @@
 import(methods)
 import(Thresher)
 
+## Hack around bug in R-devel (4.1) that does weird things with a
+## downstream Suggested package and an onLoad funciton.
+importFrom("flexmix", "flexmix")
+
 importFrom("stats", "dist", "hclust", "cmdscale", "as.dist",
            "rbinom", "as.dendrogram", "as.hclust", "quantile")
 importFrom("utils", "data")
