--- a/pkg/Mercator/DESCRIPTION
+++ b/pkg/Mercator/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: Mercator
-Version: 0.11.4
-Date: 2020-11-10
+Version: 0.11.5
+Date: 2020-11-11
 Title: Clustering and Visualizing Distance Matrices
 Author: Kevin R. Coombes, Caitlin E. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize distance matrices, especially those arising from binary data.
-Depends: R (>= 3.1), Thresher (>= 1.1)
+Depends: R (>= 3.5), Thresher (>= 1.1)
 Imports: methods, stats, utils, graphics, grDevices, KernSmooth,
-  cluster, Rtsne, ClassDiscovery, Polychrome, dendextend, igraph
+  cluster, Rtsne, ClassDiscovery, Polychrome, dendextend, igraph,
+  flexmix
 VignetteBuilder: knitr
-Suggests: knitr, rmarkdown, flexmix
+Suggests: knitr, rmarkdown
 License: Apache License (== 2.0)
 biocViews: Clustering
 URL: http://oompa.r-forge.r-project.org/
