Fixed vignette following recommendations of reviewer of manuscript
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@250 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -27,7 +27,7 @@ export("binaryDistance")
 
 # 02-binaryMatrix
 exportClasses("BinaryMatrix")
-export("BinaryMatrix", "removeDuplicateFeatures")
+export("BinaryMatrix", "removeDuplicateFeatures", "removeDuplicates")
 
 exportMethods("[", "dim", "summary", "t", "print", "show")
 
