--- a/pkg/Mercator/DESCRIPTION
+++ b/pkg/Mercator/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: Mercator
-Version: 1.0.0
-Date: 2021-02-10
+Version: 1.1.0
+Date: 2021-02-12
 Title: Clustering and Visualizing Distance Matrices
 Author: Kevin R. Coombes, Caitlin E. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize distance matrices, especially those arising from binary
-  data. See Abrams et al., 2021, <doi:10.1093/bioinformatics/btab037>.
+  data. See Abrams and colleagues, 2021, <doi:10.1093/bioinformatics/btab037>.
 Depends: R (>= 3.5), Thresher (>= 1.1)
 Imports: methods, stats, utils, graphics, grDevices, KernSmooth,
   cluster, Rtsne, ClassDiscovery, Polychrome, dendextend, igraph,
-  flexmix
+  flexmix, umap, kohonen
 VignetteBuilder: knitr
 Suggests: knitr, rmarkdown
 License: Apache License (== 2.0)
